--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/App/user.js": "/js/App/user.js",
     "/js/res/live.js": "/js/res/live.js",
     "/css/app.css": "/css/app.css",
     "/css/Assets/app.css": "/css/Assets/app.css"
