--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.35.2",
         "sass-loader": "^12.1.0",
-        "tailwindcss": "^2.0.2"
+        "tailwindcss": "^2.0.2",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "^2.6.14"
+    },
+    "dependencies": {
+        "browser-sync": "^2.27.5",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "laravel-mix-blade-reload": "^2.0.0",
+        "vue": "^2.6.14"
     }
 }
